==> MikroElektronika/mikrosdk_v2/targets/pic_8bit/mikroe/pic18/src/i2c/implementation_1/hal_ll_i2c_master.c <==
#include "hal_ll_pps.h"
#include "hal_ll_gpio.h"
#include "hal_ll_odcon_map.h"
#include "hal_ll_i2c_master.h"
#include "hal_ll_i2c_pin_map.h"
#define hal_ll_i2c_get_module_state_address (( hal_ll_i2c_master_handle_register_t *)*handle)
#define hal_ll_i2c_get_handle  (hal_ll_i2c_master_handle_register_t *)hal_ll_i2c_get_module_state_address->hal_ll_i2c_master_handle
#define hal_ll_i2c_get_base_struct(_handle) ((const hal_ll_i2c_base_handle_t *)_handle)
#define hal_ll_i2c_get_base_from_hal_handle ((hal_ll_i2c_hw_specifics_map_t *)((hal_ll_i2c_master_handle_register_t *)\
                                            (((hal_ll_i2c_master_handle_register_t *)(handle))->hal_ll_i2c_master_handle))->hal_ll_i2c_master_handle)->base
#define pin_mask 0x0F
#define port_mask 0xF0
#define hal_ll_pin(port_name) (port_name & pin_mask)
#define hal_ll_port(port_name) ((port_name & port_mask) >> 4)
#define hal_ll_i2c_check_speed(_speed) (((Get_Fosc_kHz()*1000/_speed)/4)-1)
#define HAL_LL_I2C_MAX_SPEED_VALUE 0xFFU
#define HAL_LL_I2C_MASTER_SPEED_100K 100000UL
#define HAL_LL_I2C_MASTER_SPEED_400K 400000UL
#define HAL_LL_I2C_DEFAULT_PASS_COUNT 10000
#define HAL_LL_SSPXCON1_SETUP 0x38U
#define HAL_LL_I2C_IDLE_MASK 0x1FU
#define HAL_LL_SSPSTAT_R_NOT_W_BIT 2
#define HAL_LL_SSPSTAT_CKE_BIT 6
#define HAL_LL_SSPSTAT_SMP_BIT 7
#define HAL_LL_SSPCON2_SEN_BIT 0
#define HAL_LL_SSPCON2_RSEN_BIT 1
#define HAL_LL_SSPCON2_PEN_BIT 2
#define HAL_LL_SSPCON2_RCEN_BIT 3
#define HAL_LL_SSPCON2_ACKEN_BIT 4

hal_ll_err_t hal_ll_i2c_master_register_handle( hal_ll_pin_name_t scl, hal_ll_pin_name_t sda, hal_ll_i2c_master_handle_register_t *handle_map, uint8_t *hal_module_id ) {
    uint8_t hal_ll_module_state_count = sizeof(hal_ll_module_state) / (sizeof(hal_ll_i2c_master_handle_register_t));
    uint8_t index_list[HAL_LL_I2C_MODULE_PIN_COUNT];
    uint8_t pin_check_result;

    if ( (pin_check_result = hal_ll_i2c_master_check_pins( scl, sda, &index_list )) == HAL_LL_PIN_NC ) {
        return HAL_LL_I2C_MASTER_WRONG_PINS;
    };

    if ( (hal_ll_i2c_hw_specifics_map[pin_check_result]->pins.pin_scl.pin_name != scl) ||
         (hal_ll_i2c_hw_specifics_map[pin_check_result]->pins.pin_sda.pin_name != sda) )
    {
        // Used only for chips which have I2C PPS pins
        #if HAL_LL_I2C_PPS_ENABLED == true
        // Clear previous module pps
        if ( hal_ll_pps_set_state( &hal_ll_i2c_hw_specifics_map[ pin_check_result ], false ) != HAL_LL_I2C_MASTER_SUCCESS )
            return HAL_LL_I2C_MASTER_WRONG_PINS;
        #endif

        // Map new pins
        hal_ll_i2c_master_map_pins( pin_check_result, &index_list );

        // Used only for chips which have I2C PPS pins
        #if HAL_LL_I2C_PPS_ENABLED == true
        // Set mapped pps
        if ( hal_ll_pps_set_state( &hal_ll_i2c_hw_specifics_map[ pin_check_result ], true ) != HAL_LL_I2C_MASTER_SUCCESS )
            return HAL_LL_I2C_MASTER_WRONG_PINS;
        #endif

        handle_map[pin_check_result]->init_ll_state = false;
    }

    *hal_module_id = pin_check_result;

    hal_ll_module_state[pin_check_result]->hal_ll_i2c_master_handle = (handle_t *)&hal_ll_i2c_hw_specifics_map[pin_check_result]->base;

    handle_map[pin_check_result]->hal_ll_i2c_master_handle = (handle_t *)&hal_ll_module_state[pin_check_result]->hal_ll_i2c_master_handle;

    return HAL_LL_I2C_MASTER_SUCCESS;
}

void hal_ll_i2c_master_close( handle_t *handle ) {
    low_level_handle = hal_ll_i2c_get_handle;
    hal_ll_i2c_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_i2c_get_module_state_address);

    if( low_level_handle->hal_ll_i2c_master_handle != NULL ) {
        // Used only for chips which have I2C PPS pins
        #if HAL_LL_I2C_PPS_ENABLED == true
        hal_ll_pps_set_state(hal_ll_i2c_hw_specifics_map_local, false);
        #endif

        low_level_handle->hal_ll_i2c_master_handle = NULL;
        low_level_handle->init_ll_state = false;

        hal_ll_i2c_hw_specifics_map_local->address = 0;
        hal_ll_i2c_hw_specifics_map_local->timeout = HAL_LL_I2C_DEFAULT_PASS_COUNT;
        hal_ll_i2c_hw_specifics_map_local->speed.speed_value = HAL_LL_I2C_MASTER_SPEED_100K;

        hal_ll_i2c_hw_set_module_power(hal_ll_i2c_hw_specifics_map_local, false);

        hal_ll_pps_set_state(hal_ll_i2c_hw_specifics_map_local, false);

        hal_ll_i2c_hw_specifics_map_local->pins->pin_scl.pin_name = HAL_LL_PIN_NC;
        hal_ll_i2c_hw_specifics_map_local->pins->pin_sda.pin_name = HAL_LL_PIN_NC;
        hal_ll_i2c_hw_specifics_map_local->pins->pin_scl.pin_pps = HAL_LL_PPS_FUNCTIONALITY_NONE;
        hal_ll_i2c_hw_specifics_map_local->pins->pin_sda.pin_pps = HAL_LL_PPS_FUNCTIONALITY_NONE;
    }
}

static hal_ll_err_t hal_ll_i2c_master_read_bare_metal( hal_ll_i2c_hw_specifics_map_t *map, uint8_t *read_data_buf, size_t len_read_data, hal_ll_i2c_master_end_mode_t mode ) {
    const hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct(map->base);
    size_t transfer_counter = NULL;
    uint16_t time_counter = map->timeout;
    uint8_t status = NULL;

    if( mode != HAL_LL_I2C_MASTER_WRITE_THEN_READ ) {
        status = hal_ll_i2c_master_start( map );
        if( status != HAL_LL_I2C_MASTER_SUCCESS ) {
            return status;
        }
    }

    clear_reg_bit( hal_ll_hw_reg->pir_reg_addr , hal_ll_i2c_sspif[ map->module_index ] );
    write_reg( hal_ll_hw_reg->sspbuf_reg_addr, ( ( map->address << 1 ) | 1 ) );

    status = hal_ll_i2c_master_check_write( map );
    if( status != HAL_LL_I2C_MASTER_SUCCESS ) {
        return status;
    }

    for ( transfer_counter = 0; transfer_counter < len_read_data; transfer_counter++ ) {

        clear_reg_bit( hal_ll_hw_reg->pir_reg_addr, hal_ll_i2c_sspif[ map->module_index ] );
        set_reg_bit( hal_ll_hw_reg->sspcon2_reg_addr, HAL_LL_SSPCON2_RCEN_BIT );

        // Wait for interrupt flag.
        while ( !check_reg_bit( hal_ll_hw_reg->pir_reg_addr, hal_ll_i2c_sspif[ map->module_index ] ) ) {
            if ( map->timeout ) {
                if ( !time_counter-- )
                    return HAL_LL_I2C_MASTER_TIMEOUT_READ;
            }
        }

        read_data_buf[transfer_counter] = read_reg( hal_ll_hw_reg->sspbuf_reg_addr );

        if ( transfer_counter < ( len_read_data - 1 ) ) {
            clear_reg_bit( hal_ll_hw_reg->sspcon2_reg_addr, HAL_LL_SSPCON2_ACKDT_BIT );
        } else {
            set_reg_bit( hal_ll_hw_reg->sspcon2_reg_addr, HAL_LL_SSPCON2_ACKDT_BIT );
        }

        clear_reg_bit( hal_ll_hw_reg->pir_reg_addr, hal_ll_i2c_sspif[ map->module_index ] );
        set_reg_bit( hal_ll_hw_reg->sspcon2_reg_addr, HAL_LL_SSPCON2_ACKEN_BIT );

        time_counter = map->timeout;
        while ( !check_reg_bit( hal_ll_hw_reg->pir_reg_addr, hal_ll_i2c_sspif[ map->module_index ] ) ) {
            if ( map->timeout ) {
                if ( !time_counter-- )
                    return HAL_LL_I2C_MASTER_TIMEOUT_READ;
            }
        }
    }

    set_reg_bit( hal_ll_hw_reg->sspcon2_reg_addr , HAL_LL_SSPCON2_PEN_BIT );

    return HAL_LL_I2C_MASTER_SUCCESS;
}

static hal_ll_pin_name_t hal_ll_i2c_master_check_pins( hal_ll_pin_name_t scl, hal_ll_pin_name_t sda, uint8_t *index_list ) {
    static uint16_t scl_map_size = ( sizeof( hal_ll_i2c_scl_map ) / sizeof( hal_ll_i2c_pin_map_t ) );
    static uint16_t sda_map_size = ( sizeof( hal_ll_i2c_sda_map ) / sizeof( hal_ll_i2c_pin_map_t ) );
    uint8_t scl_index;
    uint8_t sda_index;

    for ( scl_index = 0; scl_index < scl_map_size; scl_index++ ) {
        if ( hal_ll_i2c_scl_map[ scl_index ]->pin == scl ) {
            for ( sda_index = 0; sda_index < sda_map_size; sda_index++ ) {
                if ( hal_ll_i2c_sda_map[ sda_index ]->pin == sda ) {
                    if ( hal_ll_i2c_scl_map[ scl_index ]->module_index == hal_ll_i2c_sda_map[ sda_index ]->module_index ) {
                        // Map pin names
                        index_list[HAL_LL_I2C_SCL_PIN] = scl_index;
                        index_list[HAL_LL_I2C_SDA_PIN] = sda_index;
                        return hal_ll_i2c_scl_map[ scl_index ]->module_index;
                    }
                }
            }
        }
    }

    return  HAL_LL_PIN_NC;
}

static void hal_ll_i2c_master_map_pins( uint8_t module_index, uint8_t *index_list ) {
    // Map new pins
    hal_ll_i2c_hw_specifics_map[module_index]->pins.pin_scl.pin_name = hal_ll_i2c_scl_map[ index_list[HAL_LL_I2C_SCL_PIN] ]->pin;
    hal_ll_i2c_hw_specifics_map[module_index]->pins.pin_sda.pin_name = hal_ll_i2c_sda_map[ index_list[HAL_LL_I2C_SDA_PIN] ]->pin;
}
